Objects lose physics attributes on moving to a New Collection #61567

Closed
opened 2019-02-15 05:13:53 +01:00 by Kiran R · 6 comments

System Information
Operating system: Win 10
Graphics card: GeForce GTX 750 Ti

Blender Version
Version: 2.8 Beta, 69b2f52681, Branch: blender2.7, 2019-02-10

Short description of error
An object's physics attributes are reset to null after the object is moved to another (existing or new) collection.
Also the "Copy from Active" button is missing in this beta version (I don't know if the option has been moved somewhere else and I cannot find it).

Exact steps for others to reproduce the error

  • Apply Rigid Body attribute to the Cube in the Default Startup File.
  • With the Cube selected, hit M
  • Create New Collection from the context menu and move the Cube into it
  • Select the Cube and go to Physics Tab
  • See all the Rigid Body attributes gone
**System Information** Operating system: Win 10 Graphics card: GeForce GTX 750 Ti **Blender Version** Version: 2.8 Beta, 69b2f5268114, Branch: blender2.7, 2019-02-10 **Short description of error** An object's physics attributes are reset to null after the object is moved to another (existing or new) collection. Also the "Copy from Active" button is missing in this beta version (I don't know if the option has been moved somewhere else and I cannot find it). **Exact steps for others to reproduce the error** - Apply Rigid Body attribute to the Cube in the Default Startup File. - With the Cube selected, hit M - Create New Collection from the context menu and move the Cube into it - Select the Cube and go to Physics Tab - See all the Rigid Body attributes gone
Author

Added subscriber: @KiranRelangi

Added subscriber: @KiranRelangi
Author

The above problem doesn't happen when I'm dragging and dropping the object from one collection to another from the Outliner window. It is only when moving the object by hitting the the shortcut key M that the physics attributes are being deleted. I don't know if other attributes are being deleted as well. I'll report if I find any more.

BTW, I've just downloaded the latest beta version (February 15, 04:35:07 - 90f6fd0a36). The problem exists in this version too.

The above problem doesn't happen when I'm dragging and dropping the object from one collection to another from the Outliner window. It is only when moving the object by hitting the the shortcut key M that the physics attributes are being deleted. I don't know if other attributes are being deleted as well. I'll report if I find any more. BTW, I've just downloaded the latest beta version (February 15, 04:35:07 - 90f6fd0a3651). The problem exists in this version too.

Added subscribers: @dfelinto, @ZedDB

Added subscribers: @dfelinto, @ZedDB
Dalai Felinto was assigned by Sebastian Parborg 2019-02-15 10:56:47 +01:00

@dfelinto feel free to reassign if this is not for you.

@dfelinto feel free to reassign if this is not for you.

This issue was referenced by f5ac1f444b

This issue was referenced by f5ac1f444b6b3f03f65dd9ba5f44c6c46c12fb98

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61567
No description provided.